new Pom.xml added

--- a/RestApiTesting/src/main/resource/ExtentReportResults.html
+++ b/RestApiTesting/src/main/resource/ExtentReportResults.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2022-03-11 01:25:21</span>
+					<span class='suite-started-time'>2022-03-11 10:34:02</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 1m 32s+952ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 1m 21s+143ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 1m 32s+952ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 1m 21s+143ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2022-03-11 01:23:48</span> 
+							<span class='panel-lead suite-started-time'>2022-03-11 10:32:41</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2022-03-11 01:25:21</span> 
+							<span class='panel-lead suite-ended-time'>2022-03-11 10:34:02</span> 
 						</div> 
 					</div>
 				</div>
@@ -237,17 +237,17 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active fail ' extentid='511582e4-96c4-4d34-95c1-b642392c27cc'>
+										<li class='collection-item test displayed active pass ' extentid='38ff45d3-bc92-4c9b-95cc-c0141c2f58cb'>
 											<div class='test-head'>
 												<span class='test-name'>TestSeleniumOfAttendancesheet </span>
-												<span class='test-status label right outline capitalize fail'>fail</span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-03-11 01:23:49</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2022-03-11 01:25:21</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 1m 32s+562ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-03-11 10:32:41</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2022-03-11 10:34:01</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 1m 19s+913ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -265,73 +265,69 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>01:23:49</td>
+																	<td class='timestamp'>10:32:42</td>
 																		<td class='step-name'>testOrangeHrmPage is started</td>
-																	<td class='step-details'><a href='C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311012349.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311012349.png' /></a></td>
+																	<td class='step-details'><a href='C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311103242.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311103242.png' /></a></td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>01:23:52</td>
+																	<td class='timestamp'>10:32:51</td>
 																	<td class='step-details'>testOrangeHrmPage is passed</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>01:23:53</td>
+																	<td class='timestamp'>10:32:51</td>
 																		<td class='step-name'>navigatingToAttendanceMenu is started</td>
-																	<td class='step-details'><a href='C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311012353.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311012353.png' /></a></td>
-																</tr>
-																<tr>
-																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
-																	<td class='timestamp'>01:23:53</td>
-																		<td class='step-name'>navigatingToAttendanceMenu is failed</td>
-																	<td class='step-details'><a href='C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311012353.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311012353.png' /></a></td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>01:23:53</td>
-																		<td class='step-name'>testingWithTimeAndDateInPunchInPage is started</td>
-																	<td class='step-details'><a href='C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311012353.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311012353.png' /></a></td>
-																</tr>
-																<tr>
-																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
-																	<td class='timestamp'>01:24:24</td>
-																		<td class='step-name'>testingWithTimeAndDateInPunchInPage is failed</td>
-																	<td class='step-details'><a href='C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311012424.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311012424.png' /></a></td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>01:24:24</td>
-																		<td class='step-name'>testingPunchOutWithGivingInvalidTime is started</td>
-																	<td class='step-details'><a href='C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311012424.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311012424.png' /></a></td>
-																</tr>
-																<tr>
-																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
-																	<td class='timestamp'>01:24:57</td>
-																		<td class='step-name'>testingPunchOutWithGivingInvalidTime is failed</td>
-																	<td class='step-details'><a href='C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311012457.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311012457.png' /></a></td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>01:24:58</td>
-																		<td class='step-name'>testingTotalTimeHoursOnAttendanceSheet is started</td>
-																	<td class='step-details'><a href='C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311012458.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311012458.png' /></a></td>
+																	<td class='step-details'><a href='C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311103251.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311103251.png' /></a></td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>01:25:11</td>
+																	<td class='timestamp'>10:32:52</td>
+																	<td class='step-details'>navigatingToAttendanceMenu is passed</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>10:32:52</td>
+																		<td class='step-name'>testingWithTimeAndDateInPunchInPage is started</td>
+																	<td class='step-details'><a href='C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311103252.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311103252.png' /></a></td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>10:33:16</td>
+																	<td class='step-details'>testingWithTimeAndDateInPunchInPage is passed</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>10:33:16</td>
+																		<td class='step-name'>testingPunchOutWithGivingInvalidTime is started</td>
+																	<td class='step-details'><a href='C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311103316.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311103316.png' /></a></td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>10:33:32</td>
+																	<td class='step-details'>testingPunchOutWithGivingInvalidTime is passed</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>10:33:32</td>
+																		<td class='step-name'>testingTotalTimeHoursOnAttendanceSheet is started</td>
+																	<td class='step-details'><a href='C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311103332.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311103332.png' /></a></td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>10:33:45</td>
 																	<td class='step-details'>testingTotalTimeHoursOnAttendanceSheet is passed</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>01:25:11</td>
+																	<td class='timestamp'>10:33:46</td>
 																		<td class='step-name'>testingDeletingMsgOnAttendanceSheet is started</td>
-																	<td class='step-details'><a href='C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311012511.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311012511.png' /></a></td>
+																	<td class='step-details'><a href='C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311103346.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311103346.png' /></a></td>
 																</tr>
 																<tr>
-																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
-																	<td class='timestamp'>01:25:21</td>
-																		<td class='step-name'>testingDeletingMsgOnAttendanceSheet is failed</td>
-																	<td class='step-details'><a href='C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311012521.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\Swati_Deshwal\TestAutomation\RestApiTesting//resources//namePicture20220311012521.png' /></a></td>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>10:34:01</td>
+																	<td class='step-details'>testingDeletingMsgOnAttendanceSheet is passed</td>
 																</tr>
 														</tbody>
 													</table>
